--- a/public/touno.engine.css
+++ b/public/touno.engine.css
@@ -1,12 +1,27 @@
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus, .navbar-nav>li>a:hover {
+	color: #71a866 !important;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus{
+	color: #333 !important;
+}
+
+.navbar-gradient {
+	background: -webkit-gradient(linear,left top,left bottom,from(#fff),to(#f3f2eb));
+    background: -webkit-linear-gradient(top,#fff 0,#f3f2eb 100%);
+    background: linear-gradient(to bottom,#fff 0,#f3f2eb 100%);
+}
+
+.navbar-toggle {
+    margin-top: 15px;
+}
 ul.navbar-nav>li>a {
     padding-top: 22px;
 	font-weight: bold;
 }
-
 
 .navbar-brand {
 	background: url('../../images/logo.png') no-repeat 0px 10px ;
     padding: 22px 0 0 48px;
 	width: 225px;
 	height: 60px;
-}
