--- a/public/css/raannuch/_variables.scss
+++ b/public/css/raannuch/_variables.scss
@@ -15,7 +15,7 @@ $gray:                   #777 !default;
 $gray-light:             #808080 !default;
 $gray-lighter:           #ddd !default;
 
-$brand-primary:         #D9230F !default;
+$brand-primary:         #71a866 !default;
 $brand-success:         #469408 !default;
 $brand-info:            #029ACF !default;
 $brand-warning:         #9B479F !default;
