--- a/public/css/raannuch/_bootswatch.scss
+++ b/public/css/raannuch/_bootswatch.scss
@@ -2,9 +2,13 @@
 // Bootswatch
 // -----------------------------------------------------
 
-$web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:400,700" !default;
+//$web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:400,700" !default;
 
-@import url($web-font-path);
+//@import url($web-font-path);
+@import url('../materialPreloader.min.css');
+@import url('../bootstrap-datetimepicker.min.css');
+
+@import url('../thaisans-neue.css');
 
 @mixin btn-shadow($color){
   @include gradient-vertical-three-colors(lighten($color, 3%), $color, 6%, darken($color, 3%));
