home create add jquery dynatable

--- a/public/css/raannuch.scss
+++ b/public/css/raannuch.scss
@@ -1,3 +1,7 @@
+@import url('../materialPreloader.min.css');
+@import url('../bootstrap-datetimepicker.min.css');
+@import url('../thaisans-neue.css');
+
 @import 'raannuch/variables.scss';
 @import "bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_gradients.scss";
 @import "bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap.scss";
