--- a/public/touno.engine.css
+++ b/public/touno.engine.css
@@ -35,3 +35,6 @@ ul.breadcrumb>li {
 	width: 225px;
 	height: 60px;
 }
+
+/*text-align: center; position: relative; height: 400px; display: block; 
+background: url(http://localhost:8081/images/dark_wood.jpg) 50% 0% repeat;*/
