--- a/public/css/raannuch.scss
+++ b/public/css/raannuch.scss
@@ -1,4 +1,4 @@
-@import url('../materialPreloader.min.css');
+@import url('../font-awesome.min.css');
 @import url('../bootstrap-datetimepicker.min.css');
 @import url('../thaisans-neue.css');
 
@@ -6,3 +6,4 @@
 @import "bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_gradients.scss";
 @import "bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap.scss";
 @import 'raannuch/bootswatch.scss';
+
