--- a/public/touno.engine.css
+++ b/public/touno.engine.css
@@ -11,6 +11,10 @@
     background: -webkit-linear-gradient(top,#fff 0,#f3f2eb 100%);
     background: linear-gradient(to bottom,#fff 0,#f3f2eb 100%);
 }*/
+body {
+	margin: 0px;
+	padding: 0px;
+}
 .page-header {
 	background: #413c35 url(../../images/pattern_dark.png);
 	margin: 60px 0 0 0;
@@ -26,8 +30,18 @@ ul.navbar-nav>li>a {
 ul.breadcrumb>li.active {
 	color: #FFF;
 }
-ul.breadcrumb>li {
-	font-weight: bold;
+
+ul.breadcrumb > li + li:before {
+    content: "\f054";
+    font: 11px 'FontAwesome';
+}
+.badge {
+	margin-top: -3px;
+}
+.money:before {
+    content: "\f154 ";
+    font: 11px 'FontAwesome';
+    padding-right: 4px;
 }
 .navbar-brand {
 	background: url('../../images/logo.png') no-repeat 10px 10px ;
