--- a/public/touno.engine.css
+++ b/public/touno.engine.css
@@ -17,7 +17,7 @@ body {
 }
 .page-header {
 	background: #413c35 url(../../images/pattern_dark.png);
-	margin: 36px 0 0 0;
+	margin: 61px 0 0 0;
 	height: 42px;
 }
 .navbar-toggle {
@@ -27,6 +27,12 @@ ul.navbar-nav>li>a {
     padding: 20px 15px 16px 15px;
 	font-weight: bold;
 }
+nav.navbar-inverse {
+	margin: 10px 0px 10px 0px;
+}
+nav.navbar-inverse ul.navbar-nav>li>a {
+    padding: 10px 15px 10px 15px;
+}
 ul.breadcrumb>li.active {
 	color: #FFF;
 }
@@ -34,6 +40,17 @@ ul.breadcrumb>li.active {
 ul.breadcrumb > li + li:before {
     content: "\f054";
     font: 11px 'FontAwesome';
+}
+i.fa-event{
+	cursor: pointer;
+    font-size: 14px;
+    margin: 0px 5px;
+    padding: 3px 2px 2px 3px;
+    border-radius: 2px;
+}
+i.fa-event:hover {
+    background-color: #444;
+    color: #FFF;
 }
 .badge {
 	margin-top: -3px;
