--- a/public/css/raannuch/_bootswatch.scss
+++ b/public/css/raannuch/_bootswatch.scss
@@ -108,12 +108,12 @@ label {
   &.radio-inline label,
   &.checkbox-inline label,
   .form-control-feedback {
-    color: $brand-primary;
+    color: #b94a48;
   }
 
   .form-control,
   .form-control:focus {
-    border-color: $brand-primary;
+    border-color: #b94a48;
   }
 }
 
